# Imago

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  aws-credentials.env.example  aws-devicefarm-credentials.env.example  bandit.json  bandit.sarif  license.txt  pyproject.toml  startchain.py
.github/workflows/: ci.yml
compliance/: release-gate-checklist.md  risk-traceability-matrix.md  sbom-and-dependency-register.md  secure-coding-standard.md  software-architecture-and-detailed-design.md  software-development-plan.md  software-requirements-specification.md  threat-model.md
deployments/docker/: Dockerfile
deployments/local/: docker-compose.yml
docs/: secure_coding_standard-medical.md
docs/api/: week4-endpoints.md
docs/architecture/: context.md  pdf_risk_extracts.json  week1-closure.md  week2-closure.md  week3-closure.md  week4-closure.md  week5-closure.md
docs/imgkb/: 2025_CISA_SBOM_Minimum_Elements.txt  SBOM_guidance_document.md  components_pacs.md  radiology_pipeline.md  release_gate_doc_for_medical_software.md  tampering_medical_images.md
docs/operations/: runbook.md
scripts/test/: benchmark_monai_scratchpad.py  run_checks.sh
src/imago/: __init__.py  main.py
tests/integration/: test_smoke.py
tests/system/: test_smoke.py
tests/unit/: test_chain.py  test_domain_events.py  test_domain_models.py  test_filesystem_storage.py  test_ingestion_service.py  test_inmemory_ledger_writer.py  test_ledger_service.py  test_monai_benchmark.py  test_monai_cache.py  test_monai_scratchpad_usage.py  test_policy_engine.py  (+2 more)
(+24 files in other folders)
